SVN
- Add support for the SQL SAVEPOINT statement
- Fix a regression where certain query would return no data
- Add support for multiple active connections
- replaced all calls to ii_allocate()/ii_reallocate() with their ruby counterparts ALLOC_N and REALLOC_N
  - Except for memory allocation in getColumn()
- Added a SQL query classifier to eliminate the need to force the query into upper case
- Moved Unicode functionality into Unicode.c and Unicode.h
- Moved defines/typedefs/function prototypes into Ingres.h
- Added new unit tests directory, see "Testing Done" for more information
- Ingres.connect() takes an optional username/password
  - eliminates the need for connect_with_credentials (now an alias pointing to connect)
- Ingres.execute() now accepts a variable number of parameters, requires query but parameter values is optional
  - Ingres.pexecute() now an alias for Ingres.execute()
- Re-formatted the code using astyle (http://astyle.sourceforge.net/)
- Added the following Ruby constants
  - VERSION - version string, e.g. "1.4.0-dev"
  - API_LEVEL - value for IIAPI_VERSION
  - REVISION - the SVN revision for the driver
- CM_AttrTab should be defined as an extern
- Improve Ingres library and header detection
_
version 1.3.0
- Add support for the null clause used in Ingres 9.1.x (and earlier)
- Change status to Beta

version 1.3.0
- Add quote_column_names() for quoting of table and column names. Required
  for the ActiveRecord base unit tests
- Fix data truncation for the ActiveRecord :text type
- Add support for Ingres datatypes float4, float8, money, decimal, bigint,
  and ANSI date/time/timestamp.
- Add support in ingres_adapter.rb for Rails migrations
- Restrict tables() to non-system tables

version 1.2.2
- Add an ascii README file for systems without access to a browser
- Add TODO.txt show show areas that require attention
- Add missing GPL header text to ingres_adapter.rb
- Fix quote() in ingres_adapater.rb to use the class of variable rather than