@@ -1,1 +1,2 @@
 require 'tests/tc_type_lob_fetch.rb'
+require 'tests/tc_type_date_fetch.rb'
